--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react_template",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
